Fixes problem of header shrinking on small screens

--- a/app/_scss/sitewide/_header.scss
+++ b/app/_scss/sitewide/_header.scss
@@ -197,52 +197,3 @@ body {
 		}
 	}
 }
-
-@media (max-width: 379px) {
-	body {
-		header.main {
-			height: 88px;
-
-			h1, nav {
-				margin: 14px 8px;
-			}
-
-			h1 a {
-				img.text {
-					height: 27px;
-				}
-
-				img.logo {
-					height: 47px;
-				}
-			}
-
-			nav #menu-button i {
-				font-size: 1.5em;
-			}
-		}
-	}
-}
-
-@media (max-width: 339px) {
-	body {
-		header.main {
-			height: 55px;
-
-			h1 {
-				margin-left: 0;
-				bottom: -5px; left: 4px;
-
-				a {
-					img.text {
-						height: 25px;
-					}
-
-					img.logo {
-						display: none;
-					}
-				}
-			}
-		}
-	}
-}
